carousel/app/styles/carousel.scss
div#carousel {
  perspective: 1200;
  background: #100000;
  padding-top: 10%;
  font-size: 0;
  margin-bottom: 3rem;
  overflow: hidden;
}

#spinner {
  transform-style: preserve-3d;
  height: 300px;
  // transform-origin: 50% 50% -500px;
  // transition: 1s;
  div {
    width: 40%;
    max-width: 425px;
    position: absolute;
    // left: 100%;
    // transform-origin: 50% 50% -500px;
    outline: 1px solid transparent;
    @include transition-property(transform, left, opacity);
    @include transition-duration(0.6s);
    &.right-most {
      left: 70%;
      transform: rotateY(-80deg);
    }

    &.right {
      left: 60%;
      transform: rotateY(-60deg);
      z-index: 10;
      &:before {
        background-color: rgba(0, 0, 0, 0.6);
      }
    }
    &.center {
      left: 30%;
      transform: rotateY(0deg);
      z-index: 20;
      &:before {
        background-color: transparent;
      }
    }
    &.left {
      left: 0;
      transform: rotateY(60deg);
      z-index: 10;
      &:before {
        background-color: rgba(0, 0, 0, 0.6);
      }
    }
    &.left-most {
      left: -10%;
      transform: rotateY(80deg);
    }
    
    &.right-most-active {
      left: 70%;
      transform: rotateY(-80deg);
    }
    &.right-active {
      left: 60%;
      transform: rotateY(-60deg);
      z-index: 10;
      &:before {
        background-color: rgba(0, 0, 0, 0.6);
      }
    }
    &.center-active {
      left: 30%;
      transform: rotateY(0deg);
      z-index: 20;
      &:before {
        background-color: transparent;
      }
    }
    &.left-active {
      left: 0;
      transform: rotateY(60deg);
      z-index: 10;
      &:before {
        background-color: rgba(0, 0, 0, 0.6);
      }
    }
    &.left-most-active {
      left: -10%;
      transform: rotateY(80deg);
    }

    &:before {
      content: "";
      display: block;
      width: 100%;
      height: 100%;
      background-color: rgba(0, 0, 0, 1);
      position: absolute;
      // top: 0;
      @include transition-property(background-color);
      @include transition-duration(0.6s);
    }

    img {
      width: 100%
    }
  }
}

// div#carousel ~ span {
//   color: #fff;
//   margin: 5%;
//   display: inline-block;
//   text-decoration: none;
//   font-size: 2rem;
//   transition: 0.6s color;
//   position: relative;
//   margin-top: -6rem;
//   border-bottom: none;
//   line-height: 0;
//   &:hover {
//     color: #888;
//     cursor: pointer;
//   }
// }

// @keyframes moveToLeft{
//   from {
//     transform: rotateY(0deg); 
//     left: 30%;
//   }
//   to {
//     transform: rotateY(45deg);
//     left: -10%;
//   } 
// }

